@@ -9,3 +9,4 @@ Dox.sh
 currenttimezone.txt
 timezoneinfo.txt
 debian/sidu-installer.debhelper.log
+debian/sidu-installer
