@@ -7,8 +7,8 @@
 .gui.pages=home;rootfs;mountpoint;boot;user;network;run
 .gui.button.prev=<input type="submit" name="button_prev" value="Zur&uuml;ck" />
 .gui.button.next=<input type="submit" name="button_next" value="Weiter" />
+.tempdir=/var/lib/sidu-installer/
 .taskdir=${tempdir}shellserver-tasks/
-.tempdir=${home}tmp/
 
 
 .txt_title=Siduction Installation
